# uulm_mensa_bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
my-mensa-lib/: Cargo.toml
my-mensa-lib/src/: lib.rs
src/: bin.rs  lib.rs  main.rs
uulm_mensa_bot/: Cargo.toml
uulm_mensa_bot/src/: main.rs
uulm_mensa_cli/: Cargo.toml
uulm_mensa_cli/src/: main.rs
