[package]
name = "my-mensa-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_mensa_lib"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "cookies"] }
reqwest_cookie_store = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
anyhow = "1.0.70"
log = "0.4.17"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
