[package]
name = "uulm_mensa_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
dotenvy = "0.15.7"
my-mensa-lib = { path = "../my-mensa-lib" }
chrono = "0.4.23"
