[package]
name = "uulm_mensa_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-mensa-lib = { path = "../my-mensa-lib" }
pretty_env_logger = { version = "0.4.0" }
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
